--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ collections:
 
 # date format to record last updated date
 date_format: "%B %d, %Y"
-last_updated: "May 7, 2025"
+last_updated: "May 12, 2025"
 
 # Options
 
@@ -47,6 +47,9 @@ author:
   name: Jiwon Lee
   # url: https://twitter.com/mdo
   email: jiwon24.lee@gmail.com
+
+# No image at link sharing
+image: null
 
 # Custom vars
 version: 3.0.0
