Update url field to fix sitemap.xml

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Jiwon Lee
 # tagline: MyThe Jekyll Butler
-url: https://getpoole.com
+url: "https://jiwon24lee.github.io"
 paginate: 1
 baseurl: ""
 permalink: pretty
